examples/test/testpolicy8118.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8118
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key45: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value17
          key48: value11
      podSelector:
        matchLabels:
          key7: value8
          key37: value42
